# pysigdig

./: pyproject.toml  setup.py
pysigdig/: __init__.py  pysigdig.py
test/: test_pysigdig.py
